tests/src/frontend/typechecking/invalid/template_expr.sk
class NoShow{}

fun main(): void {
  print_raw(`${NoShow{}}`)
}
